--- a/assets/css/nav.css
+++ b/assets/css/nav.css
@@ -134,6 +134,7 @@
 	background: rgba(39, 37, 34, 0.9);
 	z-index: 0;
 	backdrop-filter: blur(10px);
+	-webkit-backdrop-filter: blur(10px);
 }
 
 .navbar-mobile .mobile-nav-toggle {
